<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dapetoo.quiz.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5sp"
    android:paddingRight="5sp"
    android:orientation="vertical"
    android:background="#ffffdd">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textAppearance="?android:textAppearanceLarge"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/select_one_button_to_answer_a_question_and_click_on_submit_when_done_goodluck"/>


    <ScrollView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffdd">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/question1"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/question_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/nigeria_is_a_country_in_africa"
                android:textColor="#000000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="40dp">

                <RadioButton
                    android:id="@+id/yes_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"

                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/not_sure_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_sure"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/question2"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/question_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/ibadan_is_the_larget_city_in_west_africa"
                android:textColor="#000000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="40sp">

                <RadioButton
                    android:id="@+id/yes_radio_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/not_sure_radio_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_sure"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/question3"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/question_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/the_federal_capital_territory_of_nigeria_is_in_lagos_state"
                android:textColor="#000000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="40sp">

                <RadioButton
                    android:id="@+id/yes_radio_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"

                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/not_sure_radio_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_sure"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/question4"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/question_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/the_full_meaning_of_ecowas_is_economic_community_of_west_african_states"
                android:textColor="#000000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="40sp">

                <RadioButton
                    android:id="@+id/yes_radio_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"

                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/not_sure_radio_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_sure"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/question5"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/question_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/president_buhari_is_from_peoples_democratic_party"
                android:textColor="#000000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes_radio_button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/not_sure_radio_button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_sure"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvCb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ALC is cuurrently run in 2 countries. Select the box that apply"
                android:layout_marginTop="65dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nigeria"
                android:id="@+id/cb1"
                android:checked="false"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kenya"
                android:id="@+id/cb2"
                android:checked="false"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="South Africa"
                android:id="@+id/cb3"
                android:checked="false"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Benin"
                android:id="@+id/cb4"
                android:checked="false"/>




            <TextView
                android:id="@+id/result_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:background="#006666"
                android:text=""
                android:textColor="#ff0000"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/get_quiz_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/get_quiz_result"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:onClick="getQuizResult"/>
    <Button
        android:id="@+id/back_to_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back_to_top"
        android:textColor="#ffffff"
        android:textSize="20sp" />
</LinearLayout>